styles/style.css
.headerClass {
    background-color: #1E2330;
    color: white;
    min-height: 280px;
}

.footerClass {
    background-color: #1E2330;    
    color: orange;
    text-align: center;
    padding-top: 2em;
    padding-bottom: 2em;
    clear: both;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
}

.logoClass {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-bottom: 2em;
    padding-top: 2px;
    width: 35%;
  }

  .pictureClass {
    display: block;
    margin-left: auto;
    margin-right: auto;
    padding-top: 1em;
    padding-bottom: 1em;
    max-height: 350px;
    border: 3px solid red;
}
  
  .textBox {
    text-align: center;
    margin-right: auto;
    margin-left: auto;
    width: 600px;
    padding-bottom: 1em;
  }

  .container {
    padding-right: 15px;
    padding-left: 15px;
    margin-right: auto;
    margin-left: auto;
    max-width: 1170px;
    margin-top: 4px;
    border: 3px solid blue;
}

.innerTextBox{
    padding-right: 25px;
    padding-left: 25px;
}

.emailForm {
    margin-top: 2em;
    margin-bottom: 2em;
    margin-right: auto;
    margin-left: auto;
    max-width: 370px;
    border: 3px solid green;
}

@media screen and (min-width: 1000px) {
    .column {
        float: left;
        width: 50%;
      }

  /* Clear floats after the columns */
  .row:after {
    content: "";
    display: table;
    clear: both;
  }

  .emailForm {
    display:block;
    position:relative;
    margin-top: 1em;
    margin-bottom: 2em;
    margin-left: 1em;
    }
}

.centerSection {
    text-align: center; 
  }

  /* Create two unequal columns */

  .first-column {
    width: 31%;
    padding: 5 -10px 5 5;
    float: left;
    text-align: right;
    padding-top: 10px;
  }

  .second-column {
    width: 66%;
    padding: 5 -10px 5 5;
    float: right;
    padding-top: 80px;
  }

  .titleText {
      font-weight: bold;
      font-size: 2em;
      font-family: "Comic Sans MS", Times, serif;
      color: orange;
  }

  .subtitleText{
      max-width: 800px;
      font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
  }

  .inputField {
      margin-bottom: 5px;
  }

  form > label {
      font-weight: bold;
  }

  section#carousel > figure > img {
    display: none;
    margin: 0px auto;
}

section#carousel > figure > figcaption {
    display: none;
}

section#carousel > figure.visible > img {
    display:block;
    position:relative;
    overflow:hidden;
}

section#carousel > figure.visible > figcaption {
    display: block;
    text-align: center;
    font-weight: bold;
    font-size: 1.5em;
}

.linkColumn {
    clear: both;
}

#introvid {
    display:block;
    position:relative;
    padding-left: 200px;
}

